--- a/css/index.css
+++ b/css/index.css
@@ -67,6 +67,7 @@ p {
 }
 .container {
   max-width: 800px;
+  background: #00FF00;
   width: 100%;
   margin: 0 auto;
 }
@@ -101,7 +102,6 @@ nav a {
 }
 footer {
   color: #22283B;
-  background: #f4f4f4;
   padding: 20px 0;
   border: 1px double #e0e0e0;
   border-radius: 10px;
