--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,87 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -10,7 +90,17 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   font: inherit;
   vertical-align: baseline;
 }
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
 section {
   display: block;
 }
@@ -45,7 +135,7 @@ html {
 html,
 body {
   font-family: 'Ubuntu', sans-serif;
-  color: #5E6164;
+  color: #000000;
 }
 h1,
 h2,
@@ -54,6 +144,7 @@ h4,
 h5 {
   font-family: 'Russo One', sans-serif;
   color: #23293B;
+  font-size: 3.2rem;
 }
 h2 {
   font-size: 3.2rem;
@@ -62,9 +153,13 @@ h3 {
   font-size: 2.8rem;
 }
 p {
-  font-size: 1.6rem;
   line-height: 1.4;
-}   
+  font-size: 1.6rem;
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
 .container {
   max-width: 800px;
   width: 100%;
@@ -75,15 +170,6 @@ p {
   align-content: center;
   justify-content: center;
   align-items: center;
-}
-h1 {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  align-self: center;
-  font-size: 3.8rem;
-  margin-bottom: 15px;
 }
 nav {
   display: flex;
@@ -100,13 +186,22 @@ nav a {
   color: black;
 }
 footer {
-  color: #22283B;
+  color: #000000;
   padding: 20px 0;
   border: 1px double #e0e0e0;
   border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+h1 {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-self: center;
+  font-size: 3.8rem;
+  margin-bottom: 15px;
 }
 .home .intro h2 {
   padding: 15px;
@@ -154,8 +249,8 @@ footer {
   margin-bottom: 26px;
 }
 .home .sign-up .sign-up-text .btn {
-  color: white;
-  background-color: black;
+  color: #FFFFFF;
+  background-color: #000000;
   font-size: 1.4rem;
   border-width: 1px;
   border-radius: 15px;
@@ -202,8 +297,8 @@ footer {
     margin: 0 auto;
   }
   .home .sign-up .sign-up-text .btn {
-    color: white;
-    background-color: black;
+    color: #FFFFFF;
+    background-color: #000000;
     font-size: 1.4rem;
     border-width: 1px;
     border-radius: 15px;
